--- a/index.html
+++ b/index.html
@@ -92,9 +92,9 @@
     <div class="container py-5 py-xl-5 py-md-5">
       <div class="owl-carousel owl-theme owl-carousel1">
         <div class="item">
-          <div class="row gy-4 gy-md-0 px-md-5 flex-md-row-reverse flex-xl-row-reverse px-xl-5">
+          <div class="row gy-4 justify-content-between gy-md-0 px-md-5 flex-md-row-reverse flex-xl-row-reverse px-xl-5">
 
-            <div class="col-md-6">
+            <div class="col-md-5">
               <!-- carousel-->
 
               <div><img src="img/image-19.png" alt="" class="img-fluid"></div>
@@ -103,9 +103,9 @@
               <!--carousel-->
             </div>
 
-            <div class="col-md-6 text-start pe-md-3 pe-xl-5">
+            <div class="col-md-6 mt-auto mb-auto text-start pe-md-3 pe-xl-5">
 
-              <h1 class="text-white">Consumed & trusted By industry Leaders</h1>
+              <h1 class="text-white mt-mb-0 mt-xl-0 mt-3">Consumed & trusted By industry Leaders</h1>
               <p class="text-white">“Cody is one of the best growth operators in DTC. He's a unique thinker and thought
                 leader who I get a lot of ideas from, and someone I'm lucky to call a friend"</p>
               <div class="owl-carousel owl-theme owl-carousel1">
@@ -131,9 +131,9 @@
         </div>
 
         <div class="item">
-          <div class="row gy-4 gy-md-0 px-md-5 flex-md-row-reverse flex-xl-row-reverse px-xl-5">
+          <div class="row gy-4 justify-content-between gy-md-0 px-md-5 flex-md-row-reverse flex-xl-row-reverse px-xl-5">
 
-            <div class="col-md-6">
+            <div class="col-md-5">
               <!-- carousel-->
 
               <div><img src="img/image-19.png" alt="" class="img-fluid"></div>
@@ -142,9 +142,9 @@
               <!--carousel-->
             </div>
 
-            <div class="col-md-6 text-start pe-md-3 pe-xl-5">
+            <div class="col-md-6 mt-auto mb-auto text-start pe-md-3 pe-xl-5">
 
-              <h1 class="text-white">Consumed & trusted By industry Leaders</h1>
+              <h1 class="text-white mt-mb-0 mt-xl-0 mt-3">Consumed & trusted By industry Leaders</h1>
               <p class="text-white">“Cody is one of the best growth operators in DTC. He's a unique thinker and thought
                 leader who I get a lot of ideas from, and someone I'm lucky to call a friend"</p>
               <div class="owl-carousel owl-theme owl-carousel1">
@@ -156,7 +156,11 @@
                     <p class="text-white mb-0">Founder@Sharma Brands</p>
                   </div>
                 </div>
+
+
               </div>
+
+
               <div class="btn-wrap text-start mt-4">
                 <a class="prev-btn button1 text-white"><i class="fa-solid fa-arrow-left"></i></a>
                 <a class="next-btn button1 text-white ms-4"><i class="fa-solid fa-arrow-right"></i></a>
@@ -164,6 +168,47 @@
             </div>
           </div>
         </div>
+
+        <div class="item">
+          <div class="row gy-4 justify-content-between gy-md-0 px-md-5 flex-md-row-reverse flex-xl-row-reverse px-xl-5">
+
+            <div class="col-md-5">
+              <!-- carousel-->
+
+              <div><img src="img/image-19.png" alt="" class="img-fluid"></div>
+
+
+              <!--carousel-->
+            </div>
+
+            <div class="col-md-6 mt-auto mb-auto text-start pe-md-3 pe-xl-5">
+
+              <h1 class="text-white mt-mb-0 mt-xl-0 mt-3">Consumed & trusted By industry Leaders</h1>
+              <p class="text-white">“Cody is one of the best growth operators in DTC. He's a unique thinker and thought
+                leader who I get a lot of ideas from, and someone I'm lucky to call a friend"</p>
+              <div class="owl-carousel owl-theme owl-carousel1">
+                <div class="item d-flex align-items-md-center">
+                  <div class="me-3"><img class="rounded-circle flex-shrink-0 me-3 fit-cover" src="img/image-18.png" />
+                  </div>
+                  <div>
+                    <p class="text-white mb-0">Nik Sharma</p>
+                    <p class="text-white mb-0">Founder@Sharma Brands</p>
+                  </div>
+                </div>
+
+
+              </div>
+
+
+              <div class="btn-wrap text-start mt-4">
+                <a class="prev-btn button1 text-white"><i class="fa-solid fa-arrow-left"></i></a>
+                <a class="next-btn button1 text-white ms-4"><i class="fa-solid fa-arrow-right"></i></a>
+              </div>
+            </div>
+          </div>
+        </div>
+
+        
       </div>
     </div>
   </section>
