--- a/index.html
+++ b/index.html
@@ -91,10 +91,12 @@
   <section class="bg-secondary">
     <div class="container py-5 py-xl-5 py-md-5">
       <div class="owl-carousel owl-theme owl-carousel1">
+        
+
         <div class="item">
           <div class="row gy-4 justify-content-between gy-md-0 px-md-5 flex-md-row-reverse flex-xl-row-reverse px-xl-5">
 
-            <div class="col-md-5">
+            <div class="col-md-5 d-md-flex align-items-md-center">
               <!-- carousel-->
 
               <div><img src="img/image-19.png" alt="" class="img-fluid"></div>
@@ -133,46 +135,7 @@
         <div class="item">
           <div class="row gy-4 justify-content-between gy-md-0 px-md-5 flex-md-row-reverse flex-xl-row-reverse px-xl-5">
 
-            <div class="col-md-5">
-              <!-- carousel-->
-
-              <div><img src="img/image-19.png" alt="" class="img-fluid"></div>
-
-
-              <!--carousel-->
-            </div>
-
-            <div class="col-md-6 mt-auto mb-auto text-start pe-md-3 pe-xl-5">
-
-              <h1 class="text-white mt-mb-0 mt-xl-0 mt-3">Consumed & trusted By industry Leaders</h1>
-              <p class="text-white">“Cody is one of the best growth operators in DTC. He's a unique thinker and thought
-                leader who I get a lot of ideas from, and someone I'm lucky to call a friend"</p>
-              <div class="owl-carousel owl-theme owl-carousel1">
-                <div class="item d-flex align-items-md-center">
-                  <div class="me-3"><img class="rounded-circle flex-shrink-0 me-3 fit-cover" src="img/image-18.png" />
-                  </div>
-                  <div>
-                    <p class="text-white mb-0">Nik Sharma</p>
-                    <p class="text-white mb-0">Founder@Sharma Brands</p>
-                  </div>
-                </div>
-
-
-              </div>
-
-
-              <div class="btn-wrap text-start mt-4">
-                <a class="prev-btn button1 text-white"><i class="fa-solid fa-arrow-left"></i></a>
-                <a class="next-btn button1 text-white ms-4"><i class="fa-solid fa-arrow-right"></i></a>
-              </div>
-            </div>
-          </div>
-        </div>
-
-        <div class="item">
-          <div class="row gy-4 justify-content-between gy-md-0 px-md-5 flex-md-row-reverse flex-xl-row-reverse px-xl-5">
-
-            <div class="col-md-5">
+            <div class="col-md-5 d-md-flex align-items-md-center">
               <!-- carousel-->
 
               <div><img src="img/image-19.png" alt="" class="img-fluid"></div>
@@ -209,6 +172,8 @@
         </div>
 
         
+
+
       </div>
     </div>
   </section>
@@ -220,7 +185,7 @@
 
       <div class="row gy-4 gy-md-0">
         <div
-          class="col-md-6 d-flex d-sm-flex d-md-flex justify-content-center align-items-center justify-content-md-start align-items-md-center justify-content-xl-center">
+          class="col-md-6 d-md-flex align-items-md-end">
           <div class="py-3 py-md-0 py-xl-0"><img class="rounded img-fluid w-100 fit-cover" src="img/IMAGE24.png" />
           </div>
         </div>
@@ -255,23 +220,65 @@
       </div>
       <div class="row g-3 row-cols-1 row-cols-md-2 row-cols-xl-3">
         <div class="col">
-          <blockquote class="twitter-tweet"><p lang="en" dir="ltr">Everyone’s laughing at all the ChatGPT threads, but I (a man who can’t code), just built and shipped a functioning and IMO useful Chrome Extension in ~45 minutes using just that and <a href="https://twitter.com/Replit?ref_src=twsrc%5Etfw">@Replit</a> - it was the weirdest feeling ever.</p>&mdash; Charlie Ward 🍜 (ramenclub.so) (@charlierward) <a href="https://twitter.com/charlierward/status/1637887392626384903?ref_src=twsrc%5Etfw">March 20, 2023</a></blockquote> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
+          <blockquote class="twitter-tweet">
+            <p lang="en" dir="ltr">Everyone’s laughing at all the ChatGPT threads, but I (a man who can’t code), just
+              built and shipped a functioning and IMO useful Chrome Extension in ~45 minutes using just that and <a
+                href="https://twitter.com/Replit?ref_src=twsrc%5Etfw">@Replit</a> - it was the weirdest feeling ever.
+            </p>&mdash; Charlie Ward 🍜 (ramenclub.so) (@charlierward) <a
+              href="https://twitter.com/charlierward/status/1637887392626384903?ref_src=twsrc%5Etfw">March 20, 2023</a>
+          </blockquote>
+          <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
         </div>
         <div class="col">
-          <blockquote class="twitter-tweet"><p lang="en" dir="ltr">Everyone’s laughing at all the ChatGPT threads, but I (a man who can’t code), just built and shipped a functioning and IMO useful Chrome Extension in ~45 minutes using just that and <a href="https://twitter.com/Replit?ref_src=twsrc%5Etfw">@Replit</a> - it was the weirdest feeling ever.</p>&mdash; Charlie Ward 🍜 (ramenclub.so) (@charlierward) <a href="https://twitter.com/charlierward/status/1637887392626384903?ref_src=twsrc%5Etfw">March 20, 2023</a></blockquote> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
+          <blockquote class="twitter-tweet">
+            <p lang="en" dir="ltr">Everyone’s laughing at all the ChatGPT threads, but I (a man who can’t code), just
+              built and shipped a functioning and IMO useful Chrome Extension in ~45 minutes using just that and <a
+                href="https://twitter.com/Replit?ref_src=twsrc%5Etfw">@Replit</a> - it was the weirdest feeling ever.
+            </p>&mdash; Charlie Ward 🍜 (ramenclub.so) (@charlierward) <a
+              href="https://twitter.com/charlierward/status/1637887392626384903?ref_src=twsrc%5Etfw">March 20, 2023</a>
+          </blockquote>
+          <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
         </div>
         <div class="col">
-          <blockquote class="twitter-tweet"><p lang="en" dir="ltr">Everyone’s laughing at all the ChatGPT threads, but I (a man who can’t code), just built and shipped a functioning and IMO useful Chrome Extension in ~45 minutes using just that and <a href="https://twitter.com/Replit?ref_src=twsrc%5Etfw">@Replit</a> - it was the weirdest feeling ever.</p>&mdash; Charlie Ward 🍜 (ramenclub.so) (@charlierward) <a href="https://twitter.com/charlierward/status/1637887392626384903?ref_src=twsrc%5Etfw">March 20, 2023</a></blockquote> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
+          <blockquote class="twitter-tweet">
+            <p lang="en" dir="ltr">Everyone’s laughing at all the ChatGPT threads, but I (a man who can’t code), just
+              built and shipped a functioning and IMO useful Chrome Extension in ~45 minutes using just that and <a
+                href="https://twitter.com/Replit?ref_src=twsrc%5Etfw">@Replit</a> - it was the weirdest feeling ever.
+            </p>&mdash; Charlie Ward 🍜 (ramenclub.so) (@charlierward) <a
+              href="https://twitter.com/charlierward/status/1637887392626384903?ref_src=twsrc%5Etfw">March 20, 2023</a>
+          </blockquote>
+          <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
         </div>
         <div class="col">
-          <blockquote class="twitter-tweet"><p lang="en" dir="ltr">Everyone’s laughing at all the ChatGPT threads, but I (a man who can’t code), just built and shipped a functioning and IMO useful Chrome Extension in ~45 minutes using just that and <a href="https://twitter.com/Replit?ref_src=twsrc%5Etfw">@Replit</a> - it was the weirdest feeling ever.</p>&mdash; Charlie Ward 🍜 (ramenclub.so) (@charlierward) <a href="https://twitter.com/charlierward/status/1637887392626384903?ref_src=twsrc%5Etfw">March 20, 2023</a></blockquote> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
+          <blockquote class="twitter-tweet">
+            <p lang="en" dir="ltr">Everyone’s laughing at all the ChatGPT threads, but I (a man who can’t code), just
+              built and shipped a functioning and IMO useful Chrome Extension in ~45 minutes using just that and <a
+                href="https://twitter.com/Replit?ref_src=twsrc%5Etfw">@Replit</a> - it was the weirdest feeling ever.
+            </p>&mdash; Charlie Ward 🍜 (ramenclub.so) (@charlierward) <a
+              href="https://twitter.com/charlierward/status/1637887392626384903?ref_src=twsrc%5Etfw">March 20, 2023</a>
+          </blockquote>
+          <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
         </div>
         <div class="col">
-          <blockquote class="twitter-tweet"><p lang="en" dir="ltr">Everyone’s laughing at all the ChatGPT threads, but I (a man who can’t code), just built and shipped a functioning and IMO useful Chrome Extension in ~45 minutes using just that and <a href="https://twitter.com/Replit?ref_src=twsrc%5Etfw">@Replit</a> - it was the weirdest feeling ever.</p>&mdash; Charlie Ward 🍜 (ramenclub.so) (@charlierward) <a href="https://twitter.com/charlierward/status/1637887392626384903?ref_src=twsrc%5Etfw">March 20, 2023</a></blockquote> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
+          <blockquote class="twitter-tweet">
+            <p lang="en" dir="ltr">Everyone’s laughing at all the ChatGPT threads, but I (a man who can’t code), just
+              built and shipped a functioning and IMO useful Chrome Extension in ~45 minutes using just that and <a
+                href="https://twitter.com/Replit?ref_src=twsrc%5Etfw">@Replit</a> - it was the weirdest feeling ever.
+            </p>&mdash; Charlie Ward 🍜 (ramenclub.so) (@charlierward) <a
+              href="https://twitter.com/charlierward/status/1637887392626384903?ref_src=twsrc%5Etfw">March 20, 2023</a>
+          </blockquote>
+          <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
         </div>
         <div class="col">
-          <blockquote class="twitter-tweet"><p lang="en" dir="ltr">Everyone’s laughing at all the ChatGPT threads, but I (a man who can’t code), just built and shipped a functioning and IMO useful Chrome Extension in ~45 minutes using just that and <a href="https://twitter.com/Replit?ref_src=twsrc%5Etfw">@Replit</a> - it was the weirdest feeling ever.</p>&mdash; Charlie Ward 🍜 (ramenclub.so) (@charlierward) <a href="https://twitter.com/charlierward/status/1637887392626384903?ref_src=twsrc%5Etfw">March 20, 2023</a></blockquote> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
-        </div>      
+          <blockquote class="twitter-tweet">
+            <p lang="en" dir="ltr">Everyone’s laughing at all the ChatGPT threads, but I (a man who can’t code), just
+              built and shipped a functioning and IMO useful Chrome Extension in ~45 minutes using just that and <a
+                href="https://twitter.com/Replit?ref_src=twsrc%5Etfw">@Replit</a> - it was the weirdest feeling ever.
+            </p>&mdash; Charlie Ward 🍜 (ramenclub.so) (@charlierward) <a
+              href="https://twitter.com/charlierward/status/1637887392626384903?ref_src=twsrc%5Etfw">March 20, 2023</a>
+          </blockquote>
+          <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
+        </div>
       </div>
     </div>
   </section>
