--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
       </div>
       <form class="d-flex justify-content-center flex-wrap" method="post">
         <div class="mb-3 home-mediaquery1"><input class="form-control home-form" type="email" name="email"
-            placeholder="Your Email Goes Here..." /></div>
+            placeholder="Your Email Here..." /></div>
         <div class="mb-3"><button class="btn btn-primary home-btn" type="submit">Subscribe For Free </button></div>
       </form>
     </div>
@@ -219,7 +219,8 @@
         </div>
       </div>
       <div class="row g-3 row-cols-1 row-cols-md-2 row-cols-xl-3">
-        <div class="col">
+        <h5 class="text-danger">#Comment</h5>
+        <!-- <div class="col">
           <blockquote class="twitter-tweet">
             <p lang="en" dir="ltr">Everyone’s laughing at all the ChatGPT threads, but I (a man who can’t code), just
               built and shipped a functioning and IMO useful Chrome Extension in ~45 minutes using just that and <a
@@ -278,7 +279,7 @@
               href="https://twitter.com/charlierward/status/1637887392626384903?ref_src=twsrc%5Etfw">March 20, 2023</a>
           </blockquote>
           <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
-        </div>
+        </div> -->
       </div>
     </div>
   </section>
@@ -353,7 +354,7 @@
 
             <form class="text-center" method="post">
               <p class="text-start text-primary">Subscribe</p>
-              <div class="mb-3"><input class="form-control footer-btn" type="password" name="password" placeholder="" />
+              <div class="mb-3"><input class="form-control footer-btn" type="password" name="password"  placeholder="Email Address" />
               </div>
               <div class="mb-3"><button class="btn btn-primary d-block w-100 footer-btn"
                   type="submit">Subscribe</button></div>
