--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 <body>
   <!-- section 1 navbar  -->
   <nav class="navbar navbar-dark navbar-expand-md bg-primary py-3">
-    <div class="container"><a href=""><img src="img/image-9.png" class="img-fluid" alt=""></a>
+    <div class="container"><h3>ABC Company</h3>
       <span class="btn btn-primary navbar-btn1-mob d-block d-sm-none" role="button" href="#">Subscribe For Free</span>
       <div id="navcol-5" class="collapse navbar-collapse">
         <ul class="navbar-nav ms-auto"></ul>
@@ -219,17 +219,7 @@
         </div>
       </div>
       <div class="row g-3 row-cols-1 row-cols-md-2 row-cols-xl-3">
-        <h5 class="text-danger">#Comment</h5>
-        <!-- <div class="col">
-          <blockquote class="twitter-tweet">
-            <p lang="en" dir="ltr">Everyone’s laughing at all the ChatGPT threads, but I (a man who can’t code), just
-              built and shipped a functioning and IMO useful Chrome Extension in ~45 minutes using just that and <a
-                href="https://twitter.com/Replit?ref_src=twsrc%5Etfw">@Replit</a> - it was the weirdest feeling ever.
-            </p>&mdash; Charlie Ward 🍜 (ramenclub.so) (@charlierward) <a
-              href="https://twitter.com/charlierward/status/1637887392626384903?ref_src=twsrc%5Etfw">March 20, 2023</a>
-          </blockquote>
-          <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
-        </div>
+        
         <div class="col">
           <blockquote class="twitter-tweet">
             <p lang="en" dir="ltr">Everyone’s laughing at all the ChatGPT threads, but I (a man who can’t code), just
@@ -279,7 +269,17 @@
               href="https://twitter.com/charlierward/status/1637887392626384903?ref_src=twsrc%5Etfw">March 20, 2023</a>
           </blockquote>
           <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
-        </div> -->
+        </div>
+        <div class="col">
+          <blockquote class="twitter-tweet">
+            <p lang="en" dir="ltr">Everyone’s laughing at all the ChatGPT threads, but I (a man who can’t code), just
+              built and shipped a functioning and IMO useful Chrome Extension in ~45 minutes using just that and <a
+                href="https://twitter.com/Replit?ref_src=twsrc%5Etfw">@Replit</a> - it was the weirdest feeling ever.
+            </p>&mdash; Charlie Ward 🍜 (ramenclub.so) (@charlierward) <a
+              href="https://twitter.com/charlierward/status/1637887392626384903?ref_src=twsrc%5Etfw">March 20, 2023</a>
+          </blockquote>
+          <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
+        </div> 
       </div>
     </div>
   </section>
@@ -339,7 +339,7 @@
     <div class="container pt-md-5 pt-xl-5 mt-md-5 mt-xl-5">
       <div class="row">
         <div class="col-md-8">
-          <a href=""><img src="img/IMAGE.svg" class="img-fluid" alt=""></a>
+         <h4 class="text-black">ABC Company</h4>
           <div class="col text-md-start text-lg-start text-black mt-4">
             <a class="me-md-2 me-lg-4 me-2 footer-link" href="#">About</a>
             <a class="me-md-2 me-lg-4 me-2 footer-link" href="#">Newsletter</a>
@@ -368,7 +368,7 @@
         <div class="d-flex justify-content-between align-items-center pt-md-4 pt-md-4 border-top border-primary">
           <a class="copyright-link mb-0">Privacy Policy</a>
           <ul class="list-inline mb-0 text-black">
-            <p class="mb-0 copyright-link">© 2022 Cody Plofker. All right reserved.</p>
+            <p class="mb-0 copyright-link">© ABC Company. All right reserved.</p>
           </ul>
         </div>
       </div>
